--- a/seahub/templates/snippets/space_and_traffic.html
+++ b/seahub/templates/snippets/space_and_traffic.html
@@ -21,5 +21,5 @@
 {% endif %}
 
 {% if ENABLE_PAYMENT %}
-<a class="item" href="{% url 'plan' %}">{% trans "Payment" %}</a>
+<a class="item" href="{{ payment_url }}">{% trans "Payment" %}</a>
 {% endif %}
