Disable org pub group

--- a/seahub/group/templates/group/group_manage.html
+++ b/seahub/group/templates/group/group_manage.html
@@ -79,10 +79,12 @@
             <h3>{% trans "Operations" %}</h3>
             <ul class="op-list">
                 <li><a id="group-rename" href="#" data-url="{% url 'group_rename' group.id %}">{% trans "Rename" %}</a></li>
-                {% if group.is_pub %}
-                <li><a href="{% url 'group_revoke_pub' group.id %}">{% trans "Revoke Public" %}</a></li>
-                {% else %}
-                <li><a href="{% url 'group_make_pub' group.id %}">{% trans "Make Public" %}</a></li>
+                {% if not request.user.org %}
+                  {% if group.is_pub %}
+                  <li><a href="{% url 'group_revoke_pub' group.id %}">{% trans "Revoke Public" %}</a></li>
+                  {% else %}
+                  <li><a href="{% url 'group_make_pub' group.id %}">{% trans "Make Public" %}</a></li>
+                  {% endif %}
                 {% endif %}
                 <li><a id="group-transfer" href="#" >{% trans "Transfer" %}</a></li>
                 <li><a id="group-dismiss" href="#" data-url="{% url 'group_dismiss' group.id %}">{% trans "Dismiss" %}</a></li>
