--- a/seahub/templates/choose_register.html
+++ b/seahub/templates/choose_register.html
@@ -1,11 +1,18 @@
 {% extends "myhome_base.html" %}
 {% load i18n %}
 
+{% block extra_style %}
+<style type="text/css">
+#hd {
+    margin-bottom:15px;
+}
+</style>
+{% endblock %}
+
 {% block main_panel %}
-<div class="article">
-  <button id="personal">Create a personal account</button>
-  <button id="org">Create an organization account</button>
-</div>
+<h2 id="hd">Signup</h2>
+<button id="personal" class="signup-btn">Create a personal account</button>
+<button id="org" class="signup-btn">Create an organization account</button>
 {% endblock %}
 
 {% block extra_script %}
